# optimization-method

Algorithm methods/: tabular method simplex
MultidimensionalMinimization/: firstOrderGradientMethod.py  function.py  secondOrderGradientMethod.py
OneDimensionalMinimization/: .gitignore  CMakeLists.txt  ExpressionCalculate.cpp  ExpressionCalculate.h  Interface.cpp  Interface.h  MinimizationMethods.cpp  MinimizationMethods.h  dichotomy.txt  dichotomy0,000100.txt  dichotomy0,001000.txt  dichotomy0,010000.txt  dichotomy0,050000.txt  dichotomy0,100000.txt  dichotomy0,500000.txt  function.h  functionGraphic.py  golden.txt  golden0,000100.txt  golden0,001000.txt  golden0,010000.txt  golden0,050000.txt  golden0,100000.txt  golden0,500000.txt  main  main.cpp
Transport task/: EnumMethod.txt  EnumerationMethod.py  NorthWestCornerMethod.py  PotentialMethod.py  TaskException.py  TransitionToClosedView.py  TransportTask.py  main.py
linear_programming/: EnumMethod.txt  EnumerationSimplexMethod.py  Interface.py  TableSymplexMethod.py  TaskConversion.py  main.py  tableMethod.txt
